# ImGUI_with_OpenGL3

./: .gitignore  .travis.yml  CMakeLists.txt  README.md
dependencies/: CMakeLists.txt  DEPENDENCIES.md  README.md  dependencies_history.txt  setup_dependencies.sh
dependencies/gl3w/.checkout_git/: config  index  packed-refs
dependencies/gl3w/.checkout_git/logs/: HEAD
dependencies/gl3w/.checkout_git/logs/refs/remotes/origin/: HEAD
dependencies/gl3w/.checkout_git/objects/pack/: pack-92a605788d391ea326fe1a3ef894e3f3751dc95b.idx  pack-92a605788d391ea326fe1a3ef894e3f3751dc95b.pack
dependencies/gl3w/.checkout_git/refs/heads/: master
dependencies/gl3w/cmake/: gl3w-targets.cmake
dependencies/glfw/.checkout_git/: config  index  packed-refs
dependencies/glfw/.checkout_git/logs/: HEAD
dependencies/glfw/.checkout_git/logs/refs/heads/: master
dependencies/glfw/.checkout_git/objects/pack/: pack-c5bbe17f0b860dc583ecb5241f6064cb7143b2c3.idx
dependencies/glfw/.checkout_git/refs/heads/: master
dependencies/imgui/.checkout_git/: config  index  packed-refs
dependencies/imgui/.checkout_git/logs/: HEAD
dependencies/imgui/.checkout_git/logs/refs/heads/: master
dependencies/imgui/.checkout_git/objects/pack/: pack-9e679d7670cc835133afbb1e5d8fd02e7c1aa61b.idx
dependencies/imgui/.checkout_git/refs/heads/: master
src/: CMakeLists.txt
